# blog-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: admin.py  authenticators.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_user_bio_alter_user_profile_pic_and_more.py  0003_article_articletag.py  0004_comment.py  0005_like.py  0006_like_one user should like one article only once.py  0007_follow_follow_only one follow per pair.py  0008_alter_follow_followee_alter_follow_follower.py
blog/: config.py  settings.py
utils/: codec.py  jwt.py
