[tool.poetry]
name = "blog-backend"
version = "0.1.0"
description = ""
authors = ["Tarun Luthra <tarunluthra987@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2"
djangorestframework = "^3.14.0"
PyJWT = "^2.6.0"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
psycopg2 = "^2.9.6"
whitenoise = "^6.4.0"
gunicorn = "^20.1.0"
Pillow = "^9.5.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
